<resources>
    <string name="app_name">HeartstoneCards</string>
    <string name="menu_classses">Classes</string>
    <string name="menu_sets">Sets</string>
    <string name="menu_types">Types</string>
    <string name="menu_factions">Factions</string>
    <string name="menu_qualities">Qualities</string>
    <string name="menu_races">Races</string>

    <string name="card_set"><![CDATA[ <big>CardSet</big> ]]>:\t%1$s</string>
    <string name="menu_type"><![CDATA[ <big>MenuType</big> ]]>:\t%1$s</string>
    <string name="rarity"><![CDATA[ <big>Rarity</big> ]]>:\t%1$s</string>
    <string name="cost"><![CDATA[ <big>Cost</big> ]]>:\t%1$s</string>
    <string name="attack"><![CDATA[ <big>Attack</big> ]]>:\t%1$s</string>
    <string name="health"><![CDATA[ <big>Health</big> ]]>:\t%1$s</string>
    <string name="text"><![CDATA[ <big>Text</big> ]]>:\t%1$s</string>
    <string name="flavor"><![CDATA[ <big>Flavor</big> ]]>:\t%1$s</string>
    <string name="collectible"><![CDATA[ <big>Collectible</big> ]]>:\t%1$s</string>
    <string name="race"><![CDATA[ <big>Race</big> ]]>:\t%1$s</string>
    <string name="howtoget"><![CDATA[ <big>How to get</big> ]]>:\t%1$s</string>
    <string name="howtogetgold"><![CDATA[ <big>How to get gold</big> ]]>:\t%1$s</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="title_activity_card_list">CardListActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
