<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_classses"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_classses"/>
        <item
            android:id="@+id/menu_sets"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_sets"/>
        <item
            android:id="@+id/menu_types"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_types"/>
        <item
            android:id="@+id/menu_factions"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_factions"/>
        <item
            android:id="@+id/menu_qualities"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_qualities"/>
        <item
            android:id="@+id/menu_races"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_races"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"/>
        </menu>
    </item>

</menu>
